# stkd

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md  demo.sh  install.sh
.github/workflows/: ci.yml  release.yml
crates/stack-cli/: Cargo.toml
crates/stack-cli/src/: main.rs  output.rs  provider_context.rs
crates/stack-cli/src/commands/: abort.rs  auth.rs  checkout.rs  completions.rs  config.rs  continue_cmd.rs  create.rs  delete.rs  fold.rs  info.rs  init.rs  land.rs  log.rs  mod.rs  nav.rs  redo.rs  rename.rs  restack.rs  split.rs  squash.rs  status.rs  submit.rs  sync.rs  track.rs  undo.rs  untrack.rs
crates/stack-cli/tests/: stack_operations.rs
crates/stack-cli/tests/common/: mod.rs
crates/stack-core/: Cargo.toml
crates/stack-core/src/: branch.rs  config.rs  dag.rs  error.rs  history.rs  lib.rs  rebase.rs  repository.rs  stack.rs  storage.rs  template.rs
crates/stack-db/: Cargo.toml
crates/stack-db/migrations/sqlite/: 001_initial.sql
crates/stack-db/src/: config.rs  lib.rs
crates/stack-db/src/models/: branch.rs  membership.rs  merge_request.rs
crates/stack-db/src/postgres/: mod.rs
crates/stack-db/src/repositories/: membership.rs  merge_request.rs
crates/stack-db/src/sqlite/repositories/: merge_request.rs  mod.rs  organization.rs  session.rs
crates/stack-github/: Cargo.toml
crates/stack-github/src/: api.rs  auth.rs  lib.rs  pr.rs  provider.rs  repo.rs  sync.rs
crates/stack-gitlab/: Cargo.toml
crates/stack-gitlab/src/: auth.rs  lib.rs  provider.rs
crates/stack-provider-api/: Cargo.toml
crates/stack-provider-api/src/: auth.rs  error.rs  lib.rs  traits.rs  types.rs
crates/stack-server/: Cargo.toml
crates/stack-server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/stack-server/src/api/: auth.rs  orgs.rs  repos.rs  webhooks.rs
crates/stack-server/src/auth/oauth/: github.rs  gitlab.rs
crates/stack-server/src/ws/: mod.rs
crates/stkd-cli/: Cargo.toml  README.md
crates/stkd-cli/src/: main.rs  output.rs  provider_context.rs
crates/stkd-cli/src/commands/: abort.rs  auth.rs  checkout.rs  config.rs  continue_cmd.rs  create.rs  delete.rs  fold.rs  info.rs  init.rs  install_skill.rs  land.rs  log.rs  mod.rs  modify.rs  nav.rs  redo.rs  rename.rs  restack.rs  split.rs  squash.rs  status.rs  submit.rs  sync.rs  track.rs  tui.rs  undo.rs  untrack.rs
crates/stkd-cli/tests/: stkd_operations.rs
crates/stkd-cli/tests/common/: mod.rs
crates/stkd-core/: Cargo.toml  README.md
crates/stkd-core/src/: branch.rs  config.rs  dag.rs  error.rs  history.rs  lib.rs  rebase.rs  repository.rs  stack.rs  storage.rs  template.rs
crates/stkd-db/: Cargo.toml  README.md
crates/stkd-db/migrations/postgres/: 001_initial.sql
crates/stkd-db/src/: config.rs  error.rs  lib.rs  pool.rs
crates/stkd-db/src/models/: merge_request.rs  mod.rs  organization.rs  repository.rs  session.rs  user.rs
crates/stkd-db/src/postgres/: pool.rs
crates/stkd-db/src/repositories/: branch.rs  merge_request.rs  mod.rs  organization.rs  repository.rs  session.rs  user.rs
crates/stkd-db/src/sqlite/: mod.rs  pool.rs
crates/stkd-db/src/sqlite/repositories/: branch.rs  membership.rs  merge_request.rs  organization.rs  repository.rs  session.rs  user.rs
crates/stkd-engine/: Cargo.toml  README.md
crates/stkd-engine/src/: init.rs  land.rs  lib.rs  provider.rs  restack.rs  retry.rs  submit.rs  sync.rs
crates/stkd-github/: Cargo.toml  README.md
crates/stkd-github/src/: api.rs  auth.rs  lib.rs  oauth.rs  pr.rs  provider.rs  repo.rs  sync.rs
crates/stkd-gitlab/: Cargo.toml  README.md
crates/stkd-gitlab/src/: auth.rs  lib.rs  provider.rs
crates/stkd-mcp/: Cargo.toml  README.md
crates/stkd-mcp/src/: lib.rs  main.rs
crates/stkd-provider-api/: Cargo.toml  README.md
crates/stkd-provider-api/src/: auth.rs  error.rs  lib.rs  traits.rs  types.rs
crates/stkd-server/: Cargo.toml  README.md
crates/stkd-server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/stkd-server/src/api/: auth.rs  mod.rs  orgs.rs  repos.rs  stacks.rs  webhooks.rs
crates/stkd-server/src/auth/: jwt.rs  middleware.rs  mod.rs
crates/stkd-server/src/auth/oauth/: github.rs  gitlab.rs  mod.rs
crates/stkd-server/src/ws/: hub.rs  messages.rs  mod.rs
crates/stkd-tui/: Cargo.toml  README.md
crates/stkd-tui/src/: app.rs  event.rs  lib.rs
crates/stkd-tui/src/ui/: mod.rs  modal.rs  notification.rs  stack_tree.rs  status_bar.rs
docs/: book.toml
docs/src/: SUMMARY.md  faq.md  introduction.md
docs/src/architecture/: README.md  crate-structure.md  database.md  provider-system.md  server.md  storage.md
docs/src/commands/: README.md  abort.md  auth.md  checkout.md  completions.md  config.md  continue.md  create.md  delete.md  fold.md  info.md  init.md  install-skill.md  land.md  log.md  modify.md  navigation.md  redo.md  rename.md  restack.md  split.md  squash.md  status.md  submit.md  sync.md  track.md  undo.md  untrack.md
docs/src/concepts/: README.md  branch-relationships.md  restacking.md  stacked-diffs.md
docs/src/contributing/: README.md  coding-standards.md  development-setup.md  testing.md
docs/src/dashboard/: README.md  configuration.md  deployment.md  setup.md
docs/src/getting-started/: README.md  first-stack.md  workflows.md
docs/src/installation/: README.md  from-source.md  package-managers.md
docs/src/providers/: README.md  github.md  gitlab.md  implementing.md
docs/src/tutorials/: README.md  basic-workflow.md  handling-conflicts.md  multi-pr-feature.md  team-workflow.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/commands/: auth.md  checkout.md  config.md  create.md  delete.md  fold.md  index.md  land.md  log.md  modify.md  navigation.md  rename.md  restack.md  split.md  squash.md  submit.md  sync.md  top-bottom.md  (+2 more)
npm/stkd-cli/: README.md  package.json  uninstall.js
pypi/stkd-cli/: README.md  pyproject.toml
pypi/stkd-cli/stkd_cli/: __init__.py  __main__.py
scripts/: release.sh
web/: index.html  package.json  tailwind.config.js  vite.config.ts
web/src/: App.vue  style.css
(+48 files in other folders)
