[package]
name = "stack-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Stack - stacked diffs for Git"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Git
git2 = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
