[package]
name = "stack-github"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GitHub integration for Stack"

[dependencies]
stack-core = { path = "../stack-core" }

# Git
git2 = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
reqwest = { workspace = true }
graphql_client = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
