[package]
name = "stack-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web API server for Stack dashboard - provides REST API and WebSocket support"

[[bin]]
name = "stack-server"
path = "src/main.rs"

[dependencies]
# Internal crates
stack-db = { path = "../stack-db" }
stack-provider-api = { path = "../stack-provider-api" }
stack-github = { path = "../stack-github" }
stack-gitlab = { path = "../stack-gitlab" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Hashing
md5 = "0.7"

# WebSocket support
futures = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
