[package]
name = "stkd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI for Stkd - stacked diffs for Git"
readme.workspace = true
authors.workspace = true

[[bin]]
name = "gt"
path = "src/main.rs"

[dependencies]
stkd-core = { path = "../stkd-core", version = "0.1.0" }
stkd-engine = { path = "../stkd-engine", version = "0.1.0" }
stkd-provider-api = { path = "../stkd-provider-api", version = "0.1.0" }
stkd-github = { path = "../stkd-github", version = "0.1.0" }
stkd-gitlab = { path = "../stkd-gitlab", version = "0.1.0" }
stkd-tui = { path = "../stkd-tui", version = "0.1.0" }

# Git
git2 = { workspace = true }

# URL parsing
url = { workspace = true }

# Async
tokio = { workspace = true }

# CLI
clap = { workspace = true }
clap_complete = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Terminal
colored = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
