[package]
name = "stkd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core library for Stkd - stacked diffs for Git"
readme.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Git
git2 = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
regex = { workspace = true }
fslock = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
