[package]
name = "stkd-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "MCP server for Stack - exposes gt operations as Model Context Protocol tools"
readme.workspace = true
authors.workspace = true

[[bin]]
name = "stkd-mcp"
path = "src/main.rs"

[dependencies]
stkd-core = { path = "../stkd-core", version = "0.1.0" }
stkd-engine = { path = "../stkd-engine", version = "0.1.0" }
stkd-provider-api = { path = "../stkd-provider-api", version = "0.1.0" }

# MCP SDK
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
schemars = "1.0"

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
