[package]
name = "stkd-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Web API server for Stkd dashboard - provides REST API and WebSocket support"

[[bin]]
name = "stkd-server"
path = "src/main.rs"

[dependencies]
# Internal crates
stkd-db = { path = "../stkd-db", version = "0.1.0" }
stkd-provider-api = { path = "../stkd-provider-api", version = "0.1.0" }
stkd-github = { path = "../stkd-github", version = "0.1.0" }
stkd-gitlab = { path = "../stkd-gitlab", version = "0.1.0" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Hashing
md5 = "0.7"

# WebSocket support
futures = "0.3"

# Synchronization
parking_lot = "0.12"

[dev-dependencies]
tempfile = { workspace = true }
