[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stkd-cli"
version = "0.1.0"
description = "Stack CLI - Stacked diffs for Git"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Neul Labs", email = "hello@neullabs.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.8"

[project.scripts]
gt = "stkd_cli:main"

[project.urls]
Homepage = "https://docs.neullabs.com/stkd"
Repository = "https://github.com/neul-labs/stkd"
Issues = "https://github.com/neul-labs/stkd/issues"
